--- a/Kleaf.Rmd
+++ b/Kleaf.Rmd
@@ -639,11 +639,82 @@ geom_line(aes(x = x_seq.NAVI, y = y_model.NAVI), color = 'black', size=2, alpha=
 NAVI.plot
 ```
 
+
+#PABI
+
+```{r}
+
+PABI_Kleaf <-  read_excel("data/Kleaf_Karli_Marion_CESE.xlsx", sheet = "PABI")
+
+```
+
+##Clean
+```{r}
+dim(PABI_Kleaf)
+#[1] 21 31
+ PABI_Kleaf_clean <- PABI_Kleaf %>% 
+  filter(Specie == "PABI") %>%
+   drop_na(`Psileaf_fin (Mpa)`) %>%
+   drop_na(`Kleaf Tcorr (mmol m-2 s-1 MPa-1)`)
+dim(PABI_Kleaf_clean)
+#[1] 20 31
+
+
+
+```
+
+##fit model
+```{r}
+#E(y)=αeβx+θ
+#help from https://rpubs.com/mengxu/exponential-model
+#constant thetha = 0 because data as x increases is 0~, thetha is the stabilizing trend over as x increases.
+
+#Prepare fitting a nonlinear model
+# Estimate the rest parameters using a linear model
+model.0.PABI<- lm(log(`Kleaf Tcorr (mmol m-2 s-1 MPa-1)`) ~ `Lowest Psileaf (Mpa)`, data=PABI_Kleaf_clean)  
+summary(model.0.PABI)
+alpha.0.PABI <- exp(coef(model.0.PABI)[1])
+beta.0.PABI <- coef(model.0.PABI)[2]
+
+list(alpha = alpha.0.PABI, beta = beta.0.PABI)
+
+# Create a sequence of x values for the regression line from excel
+x_seq.PABI <- seq(min(PABI_Kleaf_clean$`Lowest Psileaf (Mpa)`), max(PABI_Kleaf_clean$`Lowest Psileaf (Mpa)`), length.out = length(PABI_Kleaf_clean$`Lowest Psileaf (Mpa)`))
+
+#output model
+y_model.PABI <-   alpha.0.PABI    * exp(beta.0.PABI   * x_seq.PABI ) 
+
+# Calculate Ψleaf at 50% loss of Kleaf
+Psi_leaf_50.PABI <- log(0.5) / beta.0.PABI[[1]]
+Psi_leaf_50.PABI
+```
+
+##plot
+```{r}
+PABI_Kleaf_clean$Individual <- as.factor(PABI_Kleaf_clean$Individual)
+
+PABI.plot <- PABI_Kleaf_clean %>%
+  ggplot()+
+  aes(x=`Lowest Psileaf (Mpa)`, y=`Kleaf Tcorr (mmol m-2 s-1 MPa-1)`, color=Individual)+
+  geom_point(color ='gray', size= 3, alpha = 0.7)+
+  #labs(
+   # x = "Leaf water potential (MPa)",
+    #y = "Leaf hydraulic conductance (mmol m-2 s-1 MPa-1)"
+  #)+
+  theme_minimal()+
+  theme(axis.title.x = element_blank())+
+  theme(axis.title.y = element_blank())+
+geom_line(aes(x = x_seq.PABI, y = y_model.PABI), color = 'black', size=2, alpha=0.7)+
+  ylim(0,25)+
+   geom_vline(xintercept = Psi_leaf_50.PABI, linetype = "dashed", color = 'red')
+   #annotate(geom='text',x=0.5,y=30,label="y = 37.95 * exp(-3.57 x)",fontface='bold', size=6)
+```
+
 #all plots
 ```{r}
 
 Kleaf.plots <- ggarrange(CESE.plot, PADI.plot, AVSA.plot, 
-STDE.plot, DASP.plot, CHLA.plot, ZEMA.plot, NAVI.plot, nrow=3, ncol=3, labels = c("(a) C. setaceus", "(b) P. dilatatum", "(c) A. sativa", "(d) S. decipiens", "(e) D. spicata", "(f) C. latifolium", "(g) Z. mays ", "(h) N. viridula"), font.label = list(face="bold.italic"), align = "v")
+STDE.plot, DASP.plot, CHLA.plot, ZEMA.plot, NAVI.plot, PABI.plot, nrow=3, ncol=3, labels = c("(a) C. setaceus", "(b) P. dilatatum", "(c) A. sativa", "(d) S. decipiens", "(e) D. spicata", "(f) C. latifolium", "(g) Z. mays ", "(h) N. viridula", "(g) P. bisulcatum"), font.label = list(face="bold.italic"), align = "v")
 
 Kleaf.plots <- annotate_figure(
   Kleaf.plots,
